--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "binary": false,
-    "multiThreaded": true,
+    "multiThreaded": false,
     "tables": [
         {
             "name": "customer",
